separate pop composition plot added

--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -221,8 +221,8 @@ div.csl-indent {
 <p>Of the 18,359 self-identified Black and White participants in NHANES 2007-2012, 10,457 participants had valid height and high-quality spirometry. This included 7,533 adults and 2,924 youths.</p>
 <p>The flow of participants up to the baseline reference population is shown in <a href="#fig-flowchart" class="quarto-xref">Figure&nbsp;1</a>. Participant flow across successive reference populations is shown in <a href="#suppfig-flowrefs" class="quarto-xref">Figure S1</a>.</p>
 <p>Characteristics of participants is summarized in <a href="#tbl-table1" class="quarto-xref">Table&nbsp;1</a> .</p>
-<p>From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;2</a>. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US.</p>
-<p>In the baseline reference population, average FEV<sub>1</sub> and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV<sub>1</sub> and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV<sub>1</sub> and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (<a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;2</a>).</p>
+<p>From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;3</a>. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US.</p>
+<p>In the baseline reference population, average FEV<sub>1</sub> and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV<sub>1</sub> and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV<sub>1</sub> and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (<a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;3</a>).</p>
 <p>Excluding individuals with various SDoH did not reduce the proportion of Asian individuals (<a href="#suppfig-Asian" class="quarto-xref">Figure S5</a>). In the baseline reference population, average FEV<sub>1</sub> and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV<sub>1</sub> and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV<sub>1</sub> and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (<a href="#suppfig-Asian" class="quarto-xref">Figure S5</a>).</p>
 <p>Among successive reference populations, the proportion of Mexican-Americans substantially decreased, confirming disproportionate impact of these exposures on Mexican-American population, compared to White population. Mexican-American youth had slightly higher FEV<sub>1</sub> and FVC at baseline compared to White youth. Average FEV<sub>1</sub> and FVC were 0.06 L and 0.04 L higher in Mexican-American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican-American and White adults had similar adjusted FEV<sub>1</sub> and FVC at baseline (<a href="#suppfig-Mexican" class="quarto-xref">Figure S6</a>). Excluding individuals with unfavourable SDoH resulted in higher FEV<sub>1</sub> and FVC values for Mexican-American population compared to White population. Adjusted average FEV<sub>1</sub> and FVC values for Mexican-American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV<sub>1</sub> and FVC were both higher by 0.03 L compared to White adults (<a href="#suppfig-Mexican" class="quarto-xref">Figure S6</a>).</p>
 <p>The appendix includes additional results for non-Mexican Hispanic population (<a href="#suppfig-hispanic" class="quarto-xref">Figure S7</a>) and those who identified as “Other-including multiracial” (<a href="#suppfig-Other" class="quarto-xref">Figure S8</a>).</p>
@@ -234,7 +234,7 @@ div.csl-indent {
 </section>
 <section id="home-ownership-bmi-and-occupation" class="level4">
 <h4 class="anchored" data-anchor-id="home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</h4>
-<p>After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in <a href="#fig-racialgap-home-bmi-job" class="quarto-xref">Figure&nbsp;3</a>. Limiting reference populations to non-obese homeowners without occupational exposures to dusts and fumes reduced the racial gap in FEV<sub>1</sub> and FVC by 21% and 19% in youth and 20% and 16% in adults.</p>
+<p>After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in <a href="#fig-racialgap-home-bmi-job" class="quarto-xref">Figure&nbsp;4</a>. Limiting reference populations to non-obese homeowners without occupational exposures to dusts and fumes reduced the racial gap in FEV<sub>1</sub> and FVC by 21% and 19% in youth and 20% and 16% in adults.</p>
 </section>
 <section id="country-of-birth" class="level4">
 <h4 class="anchored" data-anchor-id="country-of-birth">Country of Birth</h4>
@@ -853,13 +853,27 @@ Table&nbsp;1: Characteristics of Participants Included in the Baseline Reference
 </div>
 <div class="cell">
 <div class="cell-output-display">
+<div id="fig-popchange" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-popchange-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="who-is-healthy-anyways_files/figure-html/fig-popchange-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-popchange-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: Changes in population composition in successively more restrictive reference populations
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
 <div id="fig-racialgap" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-racialgap-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="who-is-healthy-anyways_files/figure-html/fig-racialgap-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-racialgap-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;2: Changes in lung function racial gaps in successively more restrictive reference populations
+Figure&nbsp;3: Changes in lung function racial gaps in successively more restrictive reference populations
 </figcaption>
 </figure>
 </div>
@@ -873,7 +887,7 @@ Figure&nbsp;2: Changes in lung function racial gaps in successively more restric
 <img src="who-is-healthy-anyways_files/figure-html/fig-racialgap-home-bmi-job-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-racialgap-home-bmi-job-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on home ownership, BMI, and occupation
+Figure&nbsp;4: Changes in lung function racial gaps after exclusions based on home ownership, BMI, and occupation
 </figcaption>
 </figure>
 </div>
@@ -1610,7 +1624,7 @@ Table S1: Characteristics of Participants Included in the Baseline Reference Pop
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1628,7 +1642,7 @@ Figure S2: Changes in lung function racial gaps for female participants
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -1650,7 +1664,7 @@ Figure S3: Changes in lung function racial gaps for male participants
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-12-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2521,7 +2535,7 @@ Table S2: Characteristics of Black Participants Included in the Baseline Referen
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-13-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-14-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2540,7 +2554,7 @@ Figure S5: Asian vs.&nbsp;White Population
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-14-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-15-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2558,7 +2572,7 @@ Figure S6: Mexican-American vs.&nbsp;White population
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-15-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-16-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2576,7 +2590,7 @@ Figure S7: Other Hispanic vs.&nbsp;White population
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-16-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-17-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2594,7 +2608,7 @@ Figure S8: Other Race Including Multiracial vs.&nbsp;White
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-17-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-18-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2616,7 +2630,7 @@ Figure S9
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-18-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-19-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2637,7 +2651,7 @@ Figure S10: Changes in lung function racial gaps based on income to poverty rati
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-19-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-20-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2655,7 +2669,7 @@ Figure S11: Leaving out job exposure
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-20-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-21-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2673,7 +2687,7 @@ Figure S12: Leaving out physical activity
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-21-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-22-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2691,7 +2705,7 @@ Figure S13: Leaving out maternal smoke
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-22-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-23-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2709,7 +2723,7 @@ Figure S14: Leaving out second-hand smoke exposure
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-23-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-24-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2727,7 +2741,7 @@ Figure S15: Leaving out obesity
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-24-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-25-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2745,7 +2759,7 @@ Figure S16: Leaving out homeownership
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-25-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-26-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2763,7 +2777,7 @@ Figure S17: Leaving out health insurance
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-26-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-27-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -2781,7 +2795,7 @@ Figure S18: Leaving out education
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-27-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-28-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -3010,7 +3024,7 @@ Ignoring unknown aesthetics: fill
 :::
 
 ::: {.cell-output-display}
-![](who-is-healthy-anyways_files/figure-html/unnamed-chunk-33-1.png){width=672}
+![](who-is-healthy-anyways_files/figure-html/unnamed-chunk-34-1.png){width=672}
 :::
 :::
 
