--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -12,9 +12,9 @@
 <meta name="author" content="Don D. Sin">
 <meta name="author" content="Peter Loewen">
 <meta name="author" content="Mohsen Sadatsafavi">
-<meta name="dcterms.date" content="2025-01-02">
+<meta name="dcterms.date" content="2025-01-03">
 
-<title>Who is healthy anyway? Varying definitions of health in reference populations and the contribution of measurable social determinants to racial disparities in lung function</title>
+<title>Social determinants and racial disparities in lung function: Findings from NHANES 2007-2012</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -95,6 +95,8 @@ div.csl-indent {
   <li><a href="#allostatic-load-1" id="toc-allostatic-load-1" class="nav-link" data-scroll-target="#allostatic-load-1">Allostatic Load</a></li>
   <li><a href="#income-to-poverty-ratio" id="toc-income-to-poverty-ratio" class="nav-link" data-scroll-target="#income-to-poverty-ratio">Income to Poverty Ratio</a></li>
   <li><a href="#leave-one-out-analysis" id="toc-leave-one-out-analysis" class="nav-link" data-scroll-target="#leave-one-out-analysis">Leave-one-out Analysis</a></li>
+  <li><a href="#leave-one-in-analysis" id="toc-leave-one-in-analysis" class="nav-link" data-scroll-target="#leave-one-in-analysis">Leave-one-in Analysis</a></li>
+  <li><a href="#two-and-three-criteria-analysis" id="toc-two-and-three-criteria-analysis" class="nav-link" data-scroll-target="#two-and-three-criteria-analysis">Two and Three Criteria Analysis</a></li>
   </ul></li>
   </ul>
 <div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="who-is-healthy-anyways.docx"><i class="bi bi-file-word"></i>MS Word</a></li><li><a href="who-is-healthy-anyways.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
@@ -103,7 +105,7 @@ div.csl-indent {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Who is healthy anyway? Varying definitions of health in reference populations and the contribution of measurable social determinants to racial disparities in lung function</h1>
+<h1 class="title">Social determinants and racial disparities in lung function: Findings from NHANES 2007-2012</h1>
 </div>
 
 
@@ -179,7 +181,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 2, 2025</p>
+      <p class="date">January 3, 2025</p>
     </div>
   </div>
   
@@ -193,7 +195,7 @@ div.csl-indent {
 
 <section id="abstract" class="level2">
 <h2 class="anchored" data-anchor-id="abstract">Abstract</h2>
-<p><strong>RATIONALE:</strong> Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. We hypothesized that the disproportionate impact of social determinants of health (SDoH) captured in survey data could help explain a larger proportion of racial gaps in lung function than previously reported.</p>
+<p><strong>RATIONALE:</strong> Racialized populations disproportionately experience exposures that impair lung function. Race-averaged reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. We hypothesized that the disproportionate impact of social determinants of health (SDoH) captured in survey data could help explain a larger proportion of racial gaps in lung function than previously reported.</p>
 <p><strong>METHODS:</strong> We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV<sub>1</sub> and FVC between minority race and ethnicity groups and White participants, separately for adults (≥20) and youths (&lt;20).</p>
 <p><strong>RESULTS:</strong> In successively healthier populations, the proportion of participants declined for non-Hispanic Black, Mexican American, and Other Hispanic populations but remained close to the reference population for Asian and Other/Multiracial participants. After excluding individuals with unfavorable SDoH, the gap between non-Hispanic Black and White Americans in FEV<sub>1</sub> and FVC reduced by 25% and 26% in youths and 26% and 19% in adults. The gap between Asian and White Americans reduced by 7% and 13% among youths but increased by 14% and 11% among adults. At baseline, Mexican Americans had slightly higher adjusted FEV<sub>1</sub> and FVC than non-Hispanic White Americans, and excluding those with unfavorable SDoH increased this gap.</p>
 <p><strong>CONCLUSIONS:</strong> The SDoH investigated herein disproportionately affected Black, Mexican American, and Other Hispanic populations, and explained a higher proportion of racial disparities in lung function than previously reported.</p>
@@ -3336,9 +3338,131 @@ Figure S18: Leaving out education
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-leavediet-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure S19: Leaving out diet health
+Figure S19: Leaving out diet
 </figcaption>
 </figure>
+</div>
+</section>
+<section id="leave-one-in-analysis" class="level3">
+<h3 class="anchored" data-anchor-id="leave-one-in-analysis">Leave-one-in Analysis</h3>
+<div class="cell">
+<div class="cell-output cell-output-stderr">
+<pre><code>NHANES N (excluding missing or low quality spiro: 17032</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>NHANES included races N (excluding missing or low quality spiro: 10457</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>adult-NHANES : 7533</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Adult counts:</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>c(2785, 1566, 2091, 2785, 2634, 1698, 1962, 2358, 1926, 2181)</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>NHANES N (excluding missing or low quality spiro: 17032</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>NHANES included races N (excluding missing or low quality spiro: 10457</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>youth-NHANES : 2924</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Youth counts:</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>c(2058, 1951, 1890, 1798, 1688, 1888, 1215, 1886, 2002, 1928)</code></pre>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-2.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-3.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-4.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-5.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-6.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-7.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-8.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-9.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-30-10.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id="two-and-three-criteria-analysis" class="level3">
+<h3 class="anchored" data-anchor-id="two-and-three-criteria-analysis">Two and Three Criteria Analysis</h3>
+<div class="cell">
+<div class="cell-output cell-output-stderr">
+<pre><code>Number of combination is 9</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Number of combination is 36</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Number of combination is 84</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
+<pre><code>Number of combination is 126</code></pre>
+</div>
 </div>
 <!-- 
 
@@ -3436,116 +3560,8 @@ youth-NHANES : 2924
 
 :::
 
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in adults, the baseline gap was 0.503 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in adults, the absolute change in gap was -0.013 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in adults, the percentage change in gap was -2.65%
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in adults, the baseline gap was 0.687 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in adults, the absolute change in gap was 0.014 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in adults, the percentage change in gap was 2%
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in youth, the baseline gap was 0.351 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in youth, the absolute change in gap was 0.015 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fev1 in youth, the percentage change in gap was 4.18%
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in youth, the baseline gap was 0.418 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in youth, the absolute change in gap was 0.018 mL
-```
-
-
-:::
-
-::: {.cell-output .cell-output-stderr}
-
-```
-For fvc in youth, the percentage change in gap was 4.35%
-```
-
-
-:::
-
 ::: {.cell-output-display}
-![](who-is-healthy-anyways_files/figure-html/unnamed-chunk-35-1.png){width=672}
+![](who-is-healthy-anyways_files/figure-html/unnamed-chunk-37-1.png){width=672}
 :::
 :::
 
